--- a/.env
+++ b/.env
@@ -1,10 +1,2 @@
-# MongoDB Configuration
-DB_URL=mongodb://<username>:<password>@localhost:27017/<database_name>
-# Example: DB_URL=mongodb://user:password@localhost:27017/social_network
+MONGODB_URI=mongodb://127.0.0.1:27017/socialDB
 
-# JWT Secret
-JWT_SECRET='secret'
-# Example: JWT_SECRET=mysecretkey123
-
-# Port
-PORT=3001
