--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "name": "social-network-api",
   "version": "1.0.0",
-  "description": "A RESTful API for a social network application built with Node.js, Express.js, and MongoDB.",
+  "description": "A social network API using Express.js and MongoDB.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
-  "author": "Your Name",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.3",
-    "validator": "^13.1.1",
-    "jsonwebtoken": "^8.5.1"
+    "mongoose": "^8.7.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.15"
   },
-  "directories": {
-    "test": "tests"
-  },
-  "keywords": []
+  "author": "",
+  "license": "ISC"
 }
